
Fri Jun 30 14:47:53 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add --enable-shared check for building libdb shared.
		While we won't use libdb shared explicitly, we might as well
		build it since we have to go through the trouble of building
		the shared objects for libkrb5.
	* Makefile.in - Add shared library rules.

Fri Jun  9 18:59:23 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.  Use DO_SUBDIRS to
		recurse down subdirectories.


Fri May 26 16:07:52 EDT 1995	Paul Park	(pjpark@mit.edu)
	Bring in version 1.85 of the Berkeley database code.  We only
	use the hashed database, so that's all that's here.  There are
	slight modifications to the code to fix one bug and to tailor
	it for usage with Kerberos.


Fri May 26 16:06:46 EDT 1995	Paul Park	(pjpark@mit.edu)
	Bring in version 1.85 of the Berkeley database code.  We only
	use the hashed database, so that's all that's here.  There are
	slight modifications which were done to the code.
