@@ -1,3 +1,8 @@
+Mon Jul  3 12:11:51 1995  Tom Yu  <tlyu@lothlorien.MIT.EDU>
+
+	* Makefile.in (libdb.a): Quiet the if statement.
+
+	* configure.in: Symlink $(TOPLIBD)/libdb.* from the right place.
 
 Fri Jun 30 14:47:53 EDT 1995	Paul Park	(pjpark@mit.edu)
 	* configure.in - Add --enable-shared check for building libdb shared.
